# keys

./: CLAUDE.md  README.md  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  auto-merge.yml
api/: build.gradle.kts
api/src/main/java/com/codeheadsystems/api/keys/v1/: Key.java  (+2 more)
buildSrc/src/main/kotlin/: buildlogic.java-library-conventions.gradle.kts
database-utils/: build.gradle.kts
database-utils/src/main/java/com/codeheadsystems/dbu/factory/: JdbiFactory.java
database-utils/src/main/java/com/codeheadsystems/dbu/liquibase/: LiquibaseHelper.java
database-utils/src/main/java/com/codeheadsystems/dbu/model/: Database.java
database-utils/src/test/java/com/codeheadsystems/dbu/liquibase/: LiquibaseHelperTest.java
database-utils/src/test/java/com/codeheadsystems/dbu/model/: DatabaseTest.java
gradle/: libs.versions.toml
keys-server/: README.md  build.gradle.kts
keys-server/src/main/java/com/codeheadsystems/keys/: KeysServer.java  KeysServerConfiguration.java
keys-server/src/main/java/com/codeheadsystems/keys/component/: KeysServerComponent.java
keys-server/src/main/java/com/codeheadsystems/keys/converter/: KeyConverter.java
keys-server/src/main/java/com/codeheadsystems/keys/dao/: RawKeyDao.java
keys-server/src/main/java/com/codeheadsystems/keys/exception/: InvalidKeyException.java
keys-server/src/main/java/com/codeheadsystems/keys/manager/: KeyManager.java
keys-server/src/main/java/com/codeheadsystems/keys/model/: RawKey.java
keys-server/src/main/resources/: db-001.xml
keys-server/src/main/resources/liquibase/: db-001.xml
pretender/: DEVELOPER_GUIDE.md  DYNAMODB_STREAMS_IMPLEMENTATION.md  GSI_TTL_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  STREAMS_ARCHITECTURE.md  STREAMS_IMPLEMENTATION.md  STREAMS_VERIFICATION_CHECKLIST.md  TODO.md  build.gradle.kts
pretender-integ/: .gitignore  README.md  build.gradle.kts  dynamodb-local-metadata.json
pretender-integ/src/test/resources/: logback-test.xml
pretender/src/main/java/com/codeheadsystems/pretender/: DynamoDbPretenderClient.java  DynamoDbStreamsPretenderClient.java
pretender/src/main/resources/liquibase/: db-001.xml  db-002.xml  db-003.xml  liquibase-setup.xml
pretender/src/test/java/com/codeheadsystems/pretender/: BaseJdbiTest.java  BasePostgreSQLTest.java  DynamoDbPretenderClientTest.java  PostgreSQLIntegrationTest.java
pretender/src/test/resources/: .testcontainers.properties
server/: build.gradle.kts
server-base/: README.md  build.gradle.kts
server-base/src/main/java/com/codeheadsystems/server/: Server.java  ServerConfiguration.java
server-base/src/test/java/com/codeheadsystems/server/: ServerTest.java  ServerTestConfiguration.java
server-base/src/test/resources/: server-test.yml
violet/: .gitignore  Cargo.toml  PLAN.md  README.md
violet/violet-cli/: Cargo.toml
violet/violet-cli/src/: main.rs
violet/violet-cli/src/commands/: daemon.rs  decrypt.rs  encrypt.rs  mod.rs
violet/violet-client/: Cargo.toml
violet/violet-client/src/: client.rs  error.rs  lib.rs  models.rs
violet/violet-core/: Cargo.toml
violet/violet-core/src/: error.rs  lib.rs
violet/violet-core/src/crypto/: aes_gcm.rs  aes_gcm_siv.rs  envelope.rs  mod.rs  types.rs
violet/violet-core/src/models/: encryption_envelope.rs
violet/violet-daemon/: Cargo.toml
violet/violet-daemon/src/: handler.rs  lib.rs  protocol.rs  server.rs
(+120 files in other folders)
