[workspace]
resolver = "2"
members = [
    "violet-core",
    "violet-client",
    "violet-cli",
    "violet-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cody Ebberson <cody@wolpert.com>"]
license = "Apache-2.0"

[workspace.dependencies]
# Crypto
aes-gcm = "0.10"
aes-gcm-siv = "0.11"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking"] }
url = "2.5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async
tokio = { version = "1.42", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.11", features = ["serde", "v4"] }

# Testing
mockito = "1.6"
